FreeST/test/Programs/ValidTests/ListsNative/fourDots1/fourdots1.fst

l : [Int]
l = 1 :: 2 :: 3 :: 4 :: 5 :: []

main : [Int]
main = l