FreeST/test/Programs/InvalidTests/Typing/underscoreInFunDec/underscoreInFunDec.fst
_ : Int
_ = 5

main : Int
main = 3
